--- a/src/main/resources/templates/layout/plantilla.html
+++ b/src/main/resources/templates/layout/plantilla.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extrasspringsecurity6">
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security6">
     <head th:fragment="head">
         <title>TechShop</title>
         <meta charset="UTF-8"/>
@@ -9,69 +9,87 @@
         <link th:href="@{/webjars/font-awesome/css/all.css}" rel="stylesheet"/>
         <script th:src="@{/webjars/jquery/jquery.min.js}"></script>
         <script th:src="@{/webjars/popper.js/umd/popper.min.js}"></script>
-        <script src="../../static/js/rutinas.js" type="text/javascript"></script>
-        <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>        
+        <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
+        <script th:src="@{/js/rutinas.js}"></script>
     </head>
+
     <body>
         <header th:fragment="header" class="header">
             <nav class="navbar navbar-expand-sm navbar-dark bg-dark p-0">
                 <div class="container">
                     <a th:href="@{/}" class="navbar-brand">[[#{aplicacion.titulo}]]</a>
+
                     <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                         <span class="navbar-toggler-icon"></span>
                     </button>
+
                     <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
-                        <ul class="navbar-nav" sec:authorize='hasRole("ROLE_VENDEDOR")'>
-                            <li class="nav-item px-2"><a class="nav-menu-link nav-link" th:href="@{/categoria/listado}">[[#{plantilla.categorias}]]</a></li>
-                            <li class="nav-item px-2"><a class="nav-menu-link nav-link" th:href="@{/producto/listado}">[[#{plantilla.productos}]]</a></li>
-                            <li class="nav-item dropdown" sec:authorize='hasRole("ROLE_ADMIN")'>
-                                <a class="nav-link dropdown-toggle" 
-                                   data-bs-toggle="dropdown" 
-                                   href="#" 
-                                   role="button" 
-                                   aria-expanded="false">[[#{plantilla.pruebas}]]</a>
+
+                        <!-- Menú principal visible para ADMIN o VENDEDOR -->
+                        <ul class="navbar-nav" sec:authorize="hasAnyRole('ADMIN','VENDEDOR')">
+                            <li class="nav-item px-2">
+                                <a class="nav-menu-link nav-link" th:href="@{/categoria/listado}">[[#{plantilla.categorias}]]</a>
+                            </li>
+                            <li class="nav-item px-2">
+                                <a class="nav-menu-link nav-link" th:href="@{/producto/listado}">[[#{plantilla.productos}]]</a>
+                            </li>
+
+                            <!-- Dropdown Pruebas solo para ADMIN -->
+                            <li class="nav-item dropdown" sec:authorize="hasRole('ADMIN')">
+                                <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">
+                                    [[#{plantilla.pruebas}]]
+                                </a>
                                 <ul class="dropdown-menu dropdown-menu-dark">
                                     <li><a class="dropdown-item" th:href="@{/pruebas/listado}">[[#{plantilla.asociaciones}]]</a></li>
                                     <li><a class="dropdown-item" th:href="@{/pruebas/listado2}">[[#{plantilla.consultas}]]</a></li>
+                                    <li><hr class="dropdown-divider"/></li>
+                                    <li><a class="dropdown-item" th:href="@{/reportes}">[[#{plantilla.reportes}]]</a></li>
                                 </ul>
                             </li>
-                            <li class="nav-item px-2"><a class="nav-menu-link nav-link" th:href="@{/usuario/listado}">[[#{plantilla.usuarios}]]</a></li>
+
+                            <li class="nav-item px-2">
+                                <a class="nav-menu-link nav-link" th:href="@{/usuario/listado}">[[#{plantilla.usuarios}]]</a>
+                            </li>
                         </ul>
+
+                        <!-- Acciones laterales -->
                         <div class="col-md-3">
-                            <ul class="navbar-nav">    
-                                <li class="nav-item px-2"><a class="nav-menu-link nav-link" th:href="@{/carrito/listado}">[[#{plantilla.carrito}]]</a></li>
-                                
+                            <ul class="navbar-nav">
+                                <li class="nav-item px-2">
+                                    <a class="nav-menu-link nav-link" th:href="@{/carrito/listado}">[[#{plantilla.carrito}]]</a>
+                                </li>
                                 <li class="nav-item px-2"><a class="nav-link" th:href="@{/(lang=es)}">ES</a></li>
                                 <li class="nav-item px-2"><a class="nav-link" th:href="@{/(lang=en)}">EN</a></li>
                             </ul>
                         </div>
+
+                        <!-- Login / Logout -->
                         <ul class="navbar-nav" sec:authorize="!isAuthenticated()">
                             <li class="nav-item">
                                 <a class="nav-link" th:href="@{/login}">
                                     <i class="fas fa-sign-in-alt"></i>
                                 </a>
                             </li>
-                        </ul>  
+                        </ul>
 
                         <ul class="navbar-nav" sec:authorize="isAuthenticated()">
                             <li class="nav-item text-white my-auto">
-                                <img th:src="@{${session.usuarioImagen}}"
-                                     alt="Imágen del usuario"
-                                     height="40"
-                                     class="rounded-circle"/>
-                                <span sec:authentication="name">Santi</span>
+                                <img th:src="@{${session.usuarioImagen}}" alt="Imágen del usuario" height="40" class="rounded-circle"/>
+                                <span sec:authentication="name"></span>
                             </li>
                             <li class="nav-item my-auto">
                                 <form method="post" th:action="@{/logout}">
-                                    <button class="btn btn-dark">
+                                    <button class="btn btn-dark" type="submit">
                                         <i class="fas fa-sign-out-alt"></i>
                                     </button>
                                 </form>
                             </li>
                         </ul>
+
                     </div>
                 </div>
             </nav>
+
             <section id="main-header" class="py-2 bg-success text-white">
                 <div class="container">
                     <div class="row">
@@ -86,9 +104,7 @@
         <footer th:fragment="footer" class="bg-info text-white mt-5 p-2">
             <div class="container">
                 <div class="col">
-                    <p class="lead text-center">
-                        &COPY [[#{plantilla.derechos}]]
-                    </p>
+                    <p class="lead text-center">&COPY; [[#{plantilla.derechos}]]</p>
                 </div>
             </div>
         </footer>
